k8s/movies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
     labels:
       app: movies
    spec:
      containers:
        - image: movies:0.1
          imagePullPolicy: Never
          name: movies
          ports:
            - containerPort: 8080
