k8s/movies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: movies
